# cpp-collision-detection

./: CMakeLists.txt  README.md  mkdocs.yml
cmake/: collision_detectionConfig.cmake  file_list.cmake
docs/: index.md
docs/concepts/: global-groups.md  group-pause-resume.md  intersections-collisions.md  layers-masks.md
docs/installation/: install-cmake.md
docs/misc/: without-partitioning.md
docs/shapes/: list-of-shapes.md  shapes.md
docs/tutorials/: first-example.md  how-it-works.md
include/collision-detection/: public.hpp
include/collision-detection/bounding-volumes/: aabb-2d.hpp
include/collision-detection/contracts/: aabb.hpp  collision-detector.hpp  collision-shape.hpp
include/collision-detection/detection/: collision-detector-2d.hpp  collisions.hpp  intersections.hpp  line-intersection.hpp
include/collision-detection/partitioning/: partitions-2d.hpp  partitions.hpp
include/collision-detection/traits/: calculates-bbox.hpp  id-generator.hpp  processes-layers-masks.hpp
src/collision-detection/bounding-volumes/: aabb-2d.cpp
src/collision-detection/detection/: collision-detector-2d.cpp  line-intersection.cpp
src/collision-detection/partitioning/: partitions-2d.cpp
src/collision-detection/traits/: calculates-bbox.cpp  id-generator.cpp  processes-layers-masks.cpp
tests/: main.cpp
tests/2d/: aabb-2d-overlapping-test.cpp  aabb2d-test.cpp  collision-detection-2d-test.cpp  partition-2d-test.cpp  shape-2d-test.cpp
tests/misc/: calculate-bbox-test.cpp  layers-masks-test.cpp  line-intersection-test.cpp
(+7 files in other folders)
